<resources>
    <string name="app_name">AirDroneBBS</string>
    <string name="add_post">Add a New Post</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create an Account</string>
    <string name="log_in">Welcome</string>
    <string name="log_out">Log out</string>
    <string name="r_username_hint">Full Name</string>
    <string name="r_email_hint">Email</string>
    <string name="r_password_hint">Password</string>
    <string name="r_confirm_hint">Confirm Password</string>
    <string name="r_allow_policy">By creating an account you agree to our Terms of Service and Privacy Policy</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="search_hint">Search what you want</string>

    <!-- Strings related to bbs -->
    <string name="mainTitle">Main Title</string>
    <string name="subTitle">Sub Title</string>
    <string name="bbs_hot_section">Hot</string>
    <string name="bbs_new_section">New</string>
    <string name="bbs_tech_section">Tech</string>
    <string name="bbs_chat_section">Chat</string>
    <string name="tech_collection_id">BBSTechPosts</string>
    <string name="chat_collection_id">BBSChatPosts</string>

    <!-- Strings related to add a post -->
    <string name="cancel_post">Cancel</string>
    <string name="post_post">Post</string>
    <string name="main_title_post">Main Title</string>
    <string name="sub_title_post">Sub Title</string>
    <string name="text_post">Text</string>
    <string name="title_activity_post_detail">Post Detail</string>
    <string name="invalid_post">Please input all the contents</string>
    <string name="sensitive_post">The input has sensitive words. Please check it</string>

    <!-- Strings related to a post's detail -->
    <string name="avatar_name">A</string>
    <string name="pre_author_name">Admin</string>
    <string name="pre_date">2018年12月30日 UTC+8 上午12:00:00</string>
    <string name="pre_main_title">Main Title</string>
    <string name="pre_sub_title">Sub Title</string>
    <string name="pre_text">Text</string>
    <string name="reply_hint">Input your reply…</string>
    <string name="send_reply">Send</string>
    <string name="delete_post">Delete</string>
    <string name="descending_view">Show in Descending</string>
    <string name="delete_message">Are you sure to delete?</string>
    <string name="yes_delete">Yes</string>
    <string name="no_delete">Cancel</string>

    <!-- Strings related to me fragment -->
    <string name="avatar">A</string>
    <string name="user_name">Admin</string>
    <string name="email">foo@bar.com</string>
    <string name="my_tech_posts">My Tech Posts</string>
    <string name="my_chat_posts">My Chat Posts</string>
    <string name="my_orders">My Orders</string>
    <string name="my_videos">My Videos</string>
    <string name="my_activities">My Activities</string>

    <!-- Strings related to trade fragment -->
    <string name="item_image">Air Drone</string>
    <string name="item_name">Inspire</string>
    <string name="item_price">$ 199.99</string>
    <string name="item_collection_id">TradeItem</string>

    <!-- Strings related to add an item -->
    <string name="add_item_title">Upload an Item</string>
    <string name="add_item_name">Name</string>
    <string name="add_item_price">Price</string>
    <string name="add_item_image">Item Image</string>
    <string name="add_item_button">Upload</string>

    <!-- Strings related to teaching fragment -->
    <string name="video_image">Teaching Video</string>
    <string name="video_title">Air Drone</string>
    <string name="video_intro">It\'s an amazing air drone</string>
    <string name="video_length">99:99</string>
    <string name="video_click">99</string>
    <string name="video_collection_id">VideoPosts</string>
    <string name="video_click_image">Played Times</string>

    <string name="title_activity_store_add_item">StoreAddItemActivity</string>
    <string name="title_activity_my_acts">MyActsActivity</string>
    <string name="title_activity_my_orders">MyOrdersActivity</string>
    <string name="title_activity_my_posts">MyPostsActivity</string>
    <string name="title_activity_my_videos">MyVideosActivity</string>
    <string name="title_activity_my_chat_posts">MyChatPostsActivity</string>

    <!-- Strings related to user acts -->
    <string name="act_name">Activity Name</string>
    <string name="act_join_num">N/M</string>
    <string name="act_date">yyyy-mm-dd hh:mm</string>
    <string name="act_collection_id">ActivityPosts</string>
    <string name="add_a_doing">Add a Doing</string>
    <string name="doing_name">Doing Name</string>
    <string name="doing_date">Date</string>
    <string name="doing_time">Time</string>
    <string name="doing_num">Required Number</string>
    <string name="confirm">Confirm</string>
    <string name="Monday_short">Mon</string>
    <string name="Tuesday_short">Tues</string>
    <string name="Wednesday_short">Wed</string>
    <string name="Thursday_short">Thur</string>
    <string name="Friday_short">Fri</string>
    <string name="Saturday_short">Sat</string>
    <string name="Sunday_short">Sun</string>
    <string name="doing_detail">Detail</string>
    <string name="doing_collection_id">ActivityPosts</string>

    <string name="title_activity_play_video">PlayVideoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_add_doing">AddDoingActivity</string>

</resources>
